[project]
name = "leetcode-portfolio-sync"
version = "1.0.0"
description = "Automatically sync accepted LeetCode submissions to a GitHub portfolio with AI-generated documentation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "typer>=0.12.3",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
    "pydantic>=2.6.4",
    "google-generativeai>=0.4.0",
    "openai>=1.14.0",
    "GitPython>=3.1.42",
    "cryptography>=42.0.5",
    "python-dotenv>=1.0.1",
]

[project.scripts]
leetcode-portfolio-sync = "leetcode_portfolio_sync.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "black>=24.2.0",
    "ruff>=0.3.2",
    "mypy>=1.9.0",
    "types-requests>=2.31.0.20240311",
    "types-pyyaml>=6.0.12.12",
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.pytest.ini_options]
addopts = "--cov=leetcode_portfolio_sync --cov-report=term-missing --cov-report=xml"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/leetcode_portfolio_sync"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "git.*",
    "google.generativeai.*",
    "openai.*",
]
ignore_missing_imports = true
